[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Controls/ControlsConfig.gd" type="Script" id=1]
[ext_resource path="res://UI/Controls/RobotControls/RobotControl.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Controls/Ports.cs" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.498039 )

[sub_resource type="Animation" id=1]
resource_name = "Close"
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -406, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 406, 720 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="ControlsConfig" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2560.0
margin_bottom = 1440.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="RobotControl" parent="." instance=ExtResource( 2 )]

[node name="Panel" type="Panel" parent="."]
anchor_bottom = 1.0
margin_right = 406.0
margin_bottom = 720.0
rect_min_size = Vector2( 406, 720 )
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PortAdderBar" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 406.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
alignment = 1

[node name="AddButton" type="Button" parent="Panel/VBoxContainer/PortAdderBar"]
margin_left = 19.0
margin_right = 122.0
margin_bottom = 48.0
disabled = true
text = "Add controller"

[node name="PortSelect" type="OptionButton" parent="Panel/VBoxContainer/PortAdderBar"]
margin_left = 126.0
margin_right = 254.0
margin_bottom = 48.0
rect_min_size = Vector2( 128, 0 )
text = "None"
items = [ "None", null, false, 0, null ]
selected = 0

[node name="PortLine" type="LineEdit" parent="Panel/VBoxContainer/PortAdderBar"]
visible = false
margin_left = 143.0
margin_right = 271.0
margin_bottom = 48.0
rect_min_size = Vector2( 128, 0 )
placeholder_text = "Port"

[node name="BaudRateLine" type="LineEdit" parent="Panel/VBoxContainer/PortAdderBar"]
margin_left = 258.0
margin_right = 386.0
margin_bottom = 48.0
rect_min_size = Vector2( 128, 0 )
text = "74880"
placeholder_text = "Baud rate"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
margin_top = 52.0
margin_right = 406.0
margin_bottom = 2160.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="PortsContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]

[node name="OpenArrow" type="Panel" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_right = 40.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 64 )

[node name="MarginContainer" type="MarginContainer" parent="Panel/OpenArrow"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="CloseButton" type="Button" parent="Panel/OpenArrow/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 36.0
margin_bottom = 60.0
text = "<<"

[node name="Ports" type="Node" parent="."]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/Close = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="pressed" from="Panel/VBoxContainer/PortAdderBar/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="item_selected" from="Panel/VBoxContainer/PortAdderBar/PortSelect" to="." method="_on_PortSelect_item_selected"]
[connection signal="pressed" from="Panel/OpenArrow/MarginContainer/CloseButton" to="." method="_on_Button_pressed"]
